# Arcade

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  mouse.lmouse  mouse.rmouse
.github/workflows/: arcade-ci.yml  check-binary.yml  coding-style-checker.yml  push-mirror.yml
Arcade/: CMakeLists.txt
Arcade/src/: App.cpp  App.hpp  Arcade.cpp  Arcade.hpp  DlUtils.cpp  DlUtils.hpp  Menu.cpp  Menu.hpp  arcade.cpp  main.cpp  utils.hpp
Arcade/src/DlFunctions/: DlFunctions.cpp  DlFunctions.hpp
Arcade/src/Sounds/: ISounds.hpp
Games/: AEntity.hpp  AGame.hpp  ASprite.hpp
Games/Minesweeper/: CMakeLists.txt
Games/Minesweeper/src/: Base.cpp  Case.cpp  Gameplay.cpp  Map.cpp  MinesweeperEngine.hpp  Render.cpp
Games/Pacman/: CMakeLists.txt  PacmanEngine.cpp  PacmanEngine.hpp
Games/Pacman/src/: PacmanEngine.cpp  PacmanEngine.hpp
Games/Snake/: CMakeLists.txt
Games/Snake/src/: Render.cpp  SnakeEngine.hpp  base.cpp  fruit.cpp  map.cpp  snake.cpp
Graphics/: ARenderer.hpp  Asset.hpp  Entity.hpp
Graphics/Ncurses/: CMakeLists.txt
Graphics/Ncurses/src/: Ncurses.cpp  Ncurses.hpp  NcursesDisp.cpp  NcursesDisp.hpp
Graphics/OpenGl/: CMakeLists.txt
Graphics/OpenGl/src/: Base.cpp  Draw.cpp  Events.cpp  OpenGl.hpp  Shaders.cpp  Window.cpp  fragment_shader.glsl  vertex_shader.glsl
Graphics/SDL/: CMakeLists.txt
Graphics/SDL/src/: SDLRenderer.cpp  SDLRenderer.hpp
Graphics/SFML/: CMakeLists.txt
Graphics/SFML/src/: SFMLRenderer.cpp  SFMLRenderer.hpp
src/: arcade.cpp  arcade.hpp  main.cpp
src/DataStructures/: Vector2.hpp
src/DisplayModules/: IDisplayModule.hpp
src/GameModules/: IGameModule.hpp
src/Games/: AGame.hpp  PacmanEngine.hpp
src/Sprites/: ASprite.hpp  ISprite.hpp
